#!/usr/bin/env php
<?php
/**
 * PHP Version 5.6
 * @category Library
 * @package ChangeLog
 * @author Steve "uru" West <steven.david.west@gmail.com>
 * @license MIT http://opensource.org/licenses/MIT
 * @link https://github.com/stevewest/changelog
 */

use ChangeLog\Console\Add;
use ChangeLog\Console\Convert;
use ChangeLog\Console\Release;
use ChangeLog\Version;
use Symfony\Component\Console\Application;
use Symfony\Component\Console\Input\InputOption;

if (file_exists(__DIR__ . '/vendor/autoload.php'))
{
	require_once(__DIR__ . '/vendor/autoload.php');
}
elseif (file_exists(__DIR__ . '/../../autoload.php'))
{
	require_once __DIR__ . '/../../autoload.php';
}

$app = new Application('Changelog', Version::VERSION);

$app->add(new Release('release'));
$app->add(new Convert('convert'));
$app->add(new Add('add'));

$app->run();